--- a/index.html
+++ b/index.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Course Certificate</title>
-    <link rel="stylesheet" href="/styles.css" />
+  <meta charset="UTF-8" />
+  <title>Course Certificate</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #ffffff;
+      font-family: Arial, sans-serif;
+    }
+
+    button {
+      padding: 14px 28px;
+      font-size: 16px;
+      background-color: #2f6db3;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #245a93;
+    }
+  </style>
 </head>
 <body>
 
-<div class="container">
-    <div id="status" class="status">
-        Verifying certificate...
-    </div>
-</div>
+<button onclick="downloadCertificate()">Course Certificate</button>
 
 <script>
+  function downloadCertificate() {
     const params = new URLSearchParams(window.location.search);
-    const certId = params.get("q");
-    const statusEl = document.getElementById("status");
+    const q = params.get("q");
 
-    if (!certId) {
-        statusEl.innerText = "Invalid certificate link.";
-        throw new Error("Missing certificate ID");
+    if (!q) {
+      alert("Invalid certificate link");
+      return;
     }
 
-    fetch("/certificates/certificates.json")
-        .then(res => res.json())
-        .then(data => {
-            if (!data[certId]) {
-                statusEl.innerText = "Certificate not found.";
-                return;
-            }
-
-            const filePath = `/certificates/${data[certId]}`;
-
-            statusEl.innerText = "Certificate verified. Downloading...";
-
-            const link = document.createElement("a");
-            link.href = filePath;
-            link.download = data[certId];
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        })
-        .catch(() => {
-            statusEl.innerText = "Error verifying certificate.";
-        });
+    const filePath = `/certificates/${q}.pdf`;
+    window.location.href = filePath;
+  }
 </script>
 
 </body>
